clm-salesforce-project/force-app/main/default/objects/CLM_Box_Config__c/CLM_Box_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Box platform-app credentials for the CLM downscoped-token service. Protected: values are DATA, never metadata, so no secret is ever committed. An admin populates the org-default record.</description>
    <label>CLM Box Config</label>
</CustomObject>