clm-salesforce-project/force-app/main/default/objects/CLM_Box_Config__c/fields/Box_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_User_Id__c</fullName>
    <description>Box user id the downscoped-token service acts as. When set, the client credentials grant uses box_subject_type=user, so the token inherits that user's existing access and no folder collaboration is needed. Leave blank to fall back to Enterprise Id and a Service Account token.</description>
    <label>Box User Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>