clm-salesforce-project/force-app/main/default/objects/CLM_Box_Config__c/fields/Clause_Library_Hub_Id__c.field-meta.xml
<CustomField>
    <fullName>Clause_Library_Hub_Id__c</fullName>
    <description>Box Hub ID of the approved clause library. Configuration rather than a caller argument: the agent may read the playbook, but it may not name which playbook to read.</description>
    <inlineHelpText>Box Hub ID for the approved clause library. Set per environment; not stored in source.</inlineHelpText>
    <label>Clause Library Hub ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>