clm-salesforce-project/force-app/main/default/objects/CLM_Box_Config__c/fields/Counter_Position_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Counter_Position_Template_ID__c</fullName>
    <description>Box file ID of the registered Doc Gen template for the counter-position memo. Configuration rather than a caller argument, for the same reason as the clause library Hub: the agent may generate the memo, but it may not choose which template the org generates from.</description>
    <inlineHelpText>Box file ID of the counter-position Doc Gen template. Set per environment; not stored in source.</inlineHelpText>
    <label>Counter-Position Template ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>