clm-salesforce-project/force-app/main/default/objects/CLM_Box_Config__c/fields/Demo_Signer_Email__c.field-meta.xml
<CustomField>
    <fullName>Demo_Signer_Email__c</fullName>
    <description>Fallback signer for a signature request when the caller names none. Exists so a demo does not stall on "who is signing?", and so the answer is the presenter rather than a guessed counterparty contact. Configuration, not source: an address is environment-bound. Leave blank in a real environment and the action will keep refusing to invent a signer.</description>
    <inlineHelpText>Email that receives demo signature requests. Set per environment; not stored in source.</inlineHelpText>
    <label>Demo Signer Email</label>
    <type>Email</type>
</CustomField>